# discord-epl-goal-clips

./: .dockerignore  .gitignore  .pylintrc  CHECKS  CLAUDE.md  Dockerfile  README.md  app.json  goal_bot.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  lint.yml  pylint.yml  typecheck.yml
deploy/: README.md  setup_dokku.sh
src/: main.py
src/config/: __init__.py  filters.py  teams.py
src/services/: discord_service.py  espn_service.py  match_notification_service.py  reddit_service.py  video_service.py
src/utils/: logger.py  match_utils.py  persistence.py  score_utils.py  url_utils.py
tests/: conftest.py  test_duplicate_detection.py  test_espn_service.py  test_post_processing.py  test_score_utils.py  test_team_detection.py
