[project]
name = "discord-epl-goal-clips"
version = "1.0.0"
description = "Discord bot for Premier League goal clips"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1.0",
    "requests>=2.31.0",
    "espn-sports-api>=0.3.1",
    "python-dotenv>=1.0.0",
    "asyncpraw>=7.7.1",
    "beautifulsoup4>=4.12.2",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "aiohttp>=3.9.1",
    "python-dateutil>=2.8.2",
    "typing-extensions>=4.8.0",
    "Brotli>=1.0.9",
    "pytz>=2024.1",
]

[dependency-groups]
dev = [
    "pylint>=3.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ty>=0.0.1a7",
]
