[project]
name = "discord-epl-goal-clips"
version = "1.0.0"
description = "Discord bot for Premier League goal clips"
requires-python = ">=3.11"
dependencies = [
    "espn-sports-api>=0.3.1",
    "python-dotenv>=1.0.0",
    "asyncpraw>=7.7.1",
    "beautifulsoup4>=4.12.2",
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "aiohttp>=3.9.1",
    "pytz>=2024.1",
    "Brotli>=1.0.9",  # Required for aiohttp to decode Brotli-compressed responses from streamff.com
]

[dependency-groups]
dev = [
    "ruff>=0.6.9",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "ty>=0.0.1a7",
]
